--- a/portail/client/src/app/map-panel-switcher/map-panel-switcher.component.html
+++ b/portail/client/src/app/map-panel-switcher/map-panel-switcher.component.html
@@ -32,7 +32,7 @@
   </tr>
 </tbody></table>
 
-<div class="card row" id="panel-switcher-wrapper" style="overflow-y:auto;overflow-x:hidden;" translate="no" title="{{ 'pannel.explanationtitle' | translate }}"
+<div class="card row" id="panel-switcher-wrapper" style="overflow-y:auto;overflow-x:hidden;" [title]="'pannel.explanationtitle' | translate"
   data-container="app-main"
   data-toggle="popover"
   data-content="Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des informations"
