--- a/portail/client/src/app/feature-panel/feature-panel.component.html
+++ b/portail/client/src/app/feature-panel/feature-panel.component.html
@@ -1,6 +1,6 @@
 <div class="card row active" id="featurepanel-wrapper">
     <div class="featurepanel-nav">
-      <!-- closure of the pannel -->
+      <!-- closure of the panel -->
       <a id="featurepanel-close" href="#" class="btn btn-outline-secondary btn-sm toggle">
           <b class="glyphicon glyphicon-remove">X</b>
       </a>
