--- a/portail/client/src/app/map-panel-switcher-components/legend/legend.component.html
+++ b/portail/client/src/app/map-panel-switcher-components/legend/legend.component.html
@@ -1,6 +1,6 @@
 <div class="card-header p-2 text-center" role="tab" id="headingLegende">
   <div data-toggle="collapse" href="#collapseLegend" aria-expanded="true" aria-controls="collapseLegend">
-    <b>{{ 'pannel.attributes' | translate }}</b>
+    <b>{{ 'panel.attributes' | translate }}</b>
   </div>
 </div>
 
