--- a/portail/client/src/app/changes/changes-main/changes-main.component.html
+++ b/portail/client/src/app/changes/changes-main/changes-main.component.html
@@ -12,7 +12,7 @@
                     <a [routerLink]="['/changements-aide']" target="_blank">{{ 'change_config.help' | translate }}</a>
             </span>
             <span id="report-bug" class="d-none d-md-block">-
-                <a href="https://github.com/Magellium/magOSM/" target="_blank">{{ 'main.bug' | translate }}</a>
+                <a href="https://gitlab.com/g2600/ch-osm" target="_blank">{{ 'main.bug' | translate }}</a>
             </span>
             
         </div>
