--- a/portail/client/src/app/map-panel-switcher-components/map-controller/map-controller.component.html
+++ b/portail/client/src/app/map-panel-switcher-components/map-controller/map-controller.component.html
@@ -1,10 +1,10 @@
 <div id="layerbar-nav" class="layerbar-nav">  
   <div class="card-header p-2 text-center" role="tab" id="headingMapController">
-    <b>{{ 'pannel.parameters' | translate }}</b>
+    <b>{{ 'panel.parameters' | translate }}</b>
   </div>
   <ul style="list-style: none;">
     <span id="layer-selector">
-    <li class="card-header p-2"><h4>{{ 'pannel.basemap' | translate }}</h4></li>
+    <li class="card-header p-2"><h4>{{ 'panel.basemap' | translate }}</h4></li>
     <li>
         <select id="baseLayerCombo" (change)="changeBaseLayer($event.target.value)">
           <option value="OSM">OpenStreetMap</option>
@@ -12,7 +12,7 @@
         </select>
     </li>
     </span>  
-    <li id="input-range-height-ref" class="card-header p-2"><h4>{{ 'pannel.transparency' | translate }}</h4></li>
+    <li id="input-range-height-ref" class="card-header p-2"><h4>{{ 'panel.transparency' | translate }}</h4></li>
     <li id="input-range">
         <input class="input-range" 
           #ref type="range" min="0" max="100" step="2.5" 
