--- a/portail/client/src/app/map-panel-switcher/map-panel-switcher.component.html
+++ b/portail/client/src/app/map-panel-switcher/map-panel-switcher.component.html
@@ -32,12 +32,12 @@
   </tr>
 </tbody></table>
 
-<div class="card row" id="panel-switcher-wrapper" style="overflow-y:auto;overflow-x:hidden;" [attr.title]=" 'panel.explanationtitle' | translate "
+<div 
+  class="card row" id="panel-switcher-wrapper" style="overflow-y:auto;overflow-x:hidden;" title=" {{'panel.explanationtitle' | translate}} "
   data-container="body"
   data-toggle="popover"
   data-html="true"
-  translate="panel.explanation"
-
+  translate="true"
   attr.data-content="<div>{{'panel.explanation' | translate}}</div>"
   data-placement="right"
 >
