--- a/portail/client/src/app/map-panel-switcher-components/map-controller/map-controller.component.html
+++ b/portail/client/src/app/map-panel-switcher-components/map-controller/map-controller.component.html
@@ -7,11 +7,13 @@
     <li class="card-header p-2"><h4>{{ 'panel.basemap' | translate }}</h4></li>
     <li>
         <select id="baseLayerCombo" (change)="changeBaseLayer($event.target.value)">
+          <option value="cantons">{{ 'cantons' | translate }}</option>
+          <option value="communes">{{ 'communes' | translate }}</option>
           <option value="OSM">OpenStreetMap</option>
-          <option value="world">World</option>
         </select>
     </li>
     </span>  
+    
     <li id="input-range-height-ref" class="card-header p-2"><h4>{{ 'panel.transparency' | translate }}</h4></li>
     <li id="input-range">
         <input class="input-range" 
