delete unuse info

--- a/portail/client/src/app/feature-panel-components/feature-main-info/feature-main-info.component.html
+++ b/portail/client/src/app/feature-panel-components/feature-main-info/feature-main-info.component.html
@@ -7,8 +7,8 @@
           <div *ngFor="let keyLabelObject of featureImportantTags.tagList.list">             
             <div [ngSwitch]="keyLabelObject.key">
               <div *ngSwitchCase="'phone'"><a target="_blank" href="tel:{{selectedFeature.get(keyLabelObject.key)}}" title="Appeler le numéro">{{selectedFeature.get(keyLabelObject.key)}}</a></div> 
-              <div *ngSwitchCase="'website'"><a target="_blank" href="{{selectedFeature.get(keyLabelObject.key)}}" title="Consulter le site web">{{ 'feature.website' | translate }}</a></div>
-              <div *ngSwitchCase="'email'"><a target="_blank" href="mailto:{{selectedFeature.get(keyLabelObject.key)}}" title="Envoyer un mail">{{ 'feature.email' | translate }}</a></div>
+              <div *ngSwitchCase="'website'"><a target="_blank" href="{{selectedFeature.get(keyLabelObject.key)}}" title="Consulter le site web">Website</a></div>
+              <div *ngSwitchCase="'email'"><a target="_blank" href="mailto:{{selectedFeature.get(keyLabelObject.key)}}" title="Envoyer un mail">Email</a></div>
               <div *ngSwitchDefault>
                 <a *ngIf="!keyLabelObject.key.startsWith('addr')">
                   <span *ngIf="keyLabelObject.label!=null"><u>{{keyLabelObject.label}} :</u> </span> {{selectedFeature.get(keyLabelObject.key)}}
@@ -26,7 +26,7 @@
       </span>
     </div>
     <ng-template #nothingToDisplay><!-- If there is nothing to display -->
-      <a><i>{{ 'feature.noinfo' | translate }} {{selectedFeature.get("osm_id")}}</i></a>
+      <a><i>No info {{selectedFeature.get("osm_id")}}</i></a>
     </ng-template>
   </div>
   <div id=external_links> <!-- Tags related to external links (do NOT write them in config) like Wikipedia, national databases, ... -->
@@ -36,11 +36,6 @@
     <span *ngFor="let k of keys" title="Voir la base de données relative à l'objet et à sa couche">
       <span *ngIf="k == 'wikipedia'"><a target="_blank" href="https://fr.wikipedia.org/wiki/{{selectedFeature.get(k)}}" title="Voir l'objet sur Wikipedia"><img src="assets/images/wikipedia_50_39px.png"></a><br></span>
       <span *ngIf="k == 'wikidata'"><a target="_blank" href="https://www.wikidata.org/wiki/{{selectedFeature.get(k)}}" title="Voir l'objet sur Wikidata"><img src="assets/images/wikidata_50_35px.png"></a><br></span>
-      <span *ngIf="k == 'ref-FR-FINESS'"><a target="_blank" href="http://finess.sante.gouv.fr/fininter/jsp/actionRechercheAvancee.do?noFiness={{selectedFeature.get(k)}}">Base nationale FINESS</a><br></span>
-      <span *ngIf="k == 'ref-UAI'"><a target="_blank" href="https://www.education.gouv.fr/pid24302/annuaire-resultat-recherche.html?lycee_name={{selectedFeature.get(k)}}">Education Nationale</a><br></span>
-      <span *ngIf="k == 'ref-FR-GendarmerieNationale'"><a target="_blank" href="https://www.data.gouv.fr/fr/datasets/liste-des-unites-de-gendarmerie-accueillant-du-public-comprenant-leur-geolocalisation-et-leurs-horaires-douverture/">Base sur data.gouv.fr</a><br></span>
-      <span *ngIf="k == 'ref-FR-RATP'"><a target="_blank" href="https://data.ratp.fr">data.ratp.fr</a><br></span>
-      <span *ngIf="k == 'ref-mhs'"><a target="_blank" href="http://www2.culture.gouv.fr/public/mistral/dapamer_fr?ACTION=NOUVEAU">Base Mérimée</a><br></span>
       <span *ngIf="k == 'twitter'"><a target="_blank" href="https://www.twitter.com/{{selectedFeature.get(k)}}" title="Lien vers le compte Twitter">@{{selectedFeature.get(k)}}</a><br></span>
     </span>
   </div>
